renamed gmaptools to todoman

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Google Maps Tools</title>
+    <title>TodoMan</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Google Maps Tools">
+    <meta name="description" content="Todo List Manager">
     <meta name="author" content="Janos Gyerik info@janosgyerik.com">
 
     <!-- Le styles -->
     <link href="static/bootstrap/css/bootstrap.css" rel="stylesheet">
-    <link href="static/css/gmaptools.css" rel="stylesheet">
+    <link href="static/css/todoman.css" rel="stylesheet">
     <style type="text/css">
       body {
         padding-top: 60px;
@@ -44,7 +44,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="index.html">gmaptools</a>
+          <a class="brand" href="index.html">TodoMan</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active"><a href="index.html">Home</a></li>
@@ -147,7 +147,7 @@
       <hr>
 
       <footer>
-        <p>&copy; Janos Gyerik 2012</p>
+        <p>&copy; Janos Gyerik 2015</p>
       </footer>
 
     </div><!--/.fluid-container-->
@@ -255,7 +255,7 @@
     <script src="static/js/underscore-min.js"></script>
     <script src="static/js/backbone-min.js"></script>
     <script src="static/js/jquery.cookie.js"></script>
-    <script src="static/js/gmaptools.backbone.js"></script>
+    <script src="static/js/todoman.backbone.js"></script>
 
   </body>
 </html>
