--- a/about.html
+++ b/about.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
-    <title>Google Maps Tools - About</title>
+    <title>TodoMan - About</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Le styles -->
     <link href="static/bootstrap/css/bootstrap.css" rel="stylesheet">
-    <link href="static/css/gmaptools.css" rel="stylesheet">
+    <link href="static/css/todoman.css" rel="stylesheet">
     <style type="text/css">
-      body {
-        padding-top: 60px;
-        padding-bottom: 40px;
-      }
-      .sidebar-nav {
-        padding: 9px 0;
-      }
+        body {
+            padding-top: 60px;
+            padding-bottom: 40px;
+        }
+
+        .sidebar-nav {
+            padding: 9px 0;
+        }
     </style>
     <link href="static/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
     <!-- Le fav and touch icons -->
@@ -30,64 +31,67 @@
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="static/ico/apple-touch-icon-114-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="static/ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="static/ico/apple-touch-icon-57-precomposed.png">
-  </head>
+</head>
 
-  <body>
+<body>
 
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="navbar-inner">
+<div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar-inner">
         <div class="container-fluid">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="index.html">gmaptools</a>
-          <div class="nav-collapse collapse">
-            <ul class="nav">
-              <li><a href="index.html">Home</a></li>
-              <li class="active"><a href="about.html">About</a></li>
-            </ul>
-          </div><!--/.nav-collapse -->
+            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </a>
+            <a class="brand" href="index.html">TodoMan</a>
+
+            <div class="nav-collapse collapse">
+                <ul class="nav">
+                    <li><a href="index.html">Home</a></li>
+                    <li class="active"><a href="about.html">About</a></li>
+                </ul>
+            </div>
+            <!--/.nav-collapse -->
         </div>
-      </div>
+    </div>
+</div>
+
+<div class="container-fluid">
+    <div class="hero-unit">
+        <h2>TodoMan</h2>
+
+        <p>Yet another todo-list manager, featuring:</p>
+
+        <ul>
+            <li>TODO: Simple and clean user interface</li>
+            <li>TODO: Group items by target date</li>
+            <li>TODO: Group items by topic</li>
+            <li>TODO: Import from ikog format</li>
+            <li>TODO: Export in ikog format</li>
+        </ul>
+
+        <p>The data is stored in local storage.</p>
+
+        <p><a href="https://github.com/janosgyerik/todoman">https://github.com/janosgyerik/todoman</a></p>
+
+        <p><a class="btn btn-primary btn-large" href="https://github.com/janosgyerik/todoman">Fork on
+            GitHub &raquo;</a></p>
     </div>
 
-    <div class="container-fluid">
-      <div class="hero-unit">
-<h2>gmaptools</h2>
-<p>Google Map Tools - coordinate finder, geocoding and other goodies</p>
-<p>The purpose of this project is twofold:</p>
-<ol>
-<li>
-<p>Implement some mapping tools that are sorely missing from the 
-   official Google Maps user interface.</p>
-</li>
-<li>
-<p>Implement the tools using Backbone.js the <em>right way</em>, to be
-   suitable as model examples of using Backbone.</p>
-</li>
-</ol>
-<p>If you would like to add more tools to the collection, or you spot
-flaws in the use of Backbone (or anything else for that matter),
-please fork the project and share your knowledge. Thanks!</p>
-        <p><a href="https://github.com/janosgyerik/gmaptools">https://github.com/janosgyerik/gmaptools</a></p>
-        <p><a class="btn btn-primary btn-large" href="https://github.com/janosgyerik/gmaptools">Fork on GitHub &raquo;</a></p>
-      </div>
+    <hr>
 
-      <hr>
+    <footer>
+        <p>&copy; Janos Gyerik 2015</p>
+    </footer>
 
-      <footer>
-        <p>&copy; Janos Gyerik 2012</p>
-      </footer>
+</div>
+<!--/.fluid-container-->
 
-    </div><!--/.fluid-container-->
+<!-- Le javascript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="static/js/jquery-1.8.0.min.js"></script>
+<script src="static/bootstrap/js/bootstrap.min.js"></script>
 
-    <!-- Le javascript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="static/js/jquery-1.8.0.min.js"></script>
-    <script src="static/bootstrap/js/bootstrap.min.js"></script>
-
-  </body>
+</body>
 </html>
