--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <title>TodoMan</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,19 +11,20 @@
     <link href="static/bootstrap/css/bootstrap.css" rel="stylesheet">
     <link href="static/css/todoman.css" rel="stylesheet">
     <style type="text/css">
-      body {
-        padding-top: 60px;
-        padding-bottom: 40px;
-      }
-      .sidebar-nav {
-        padding: 9px 0;
-      }
+        body {
+            padding-top: 60px;
+            padding-bottom: 40px;
+        }
+
+        .sidebar-nav {
+            padding: 9px 0;
+        }
     </style>
     <link href="static/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
     <!-- Le fav and touch icons -->
@@ -32,125 +33,139 @@
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="static/ico/apple-touch-icon-114-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="static/ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="static/ico/apple-touch-icon-57-precomposed.png">
-  </head>
+</head>
 
-  <body>
+<body>
 
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="navbar-inner">
+<div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar-inner">
         <div class="container-fluid">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="index.html">TodoMan</a>
-          <div class="nav-collapse collapse">
-            <ul class="nav">
-              <li class="active"><a href="index.html">Home</a></li>
-              <li><a href="about.html">About</a></li>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div>
-      </div>
-    </div>
+            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </a>
+            <a class="brand" href="index.html">TodoMan</a>
 
-    <div class="container-fluid">
-      <div class="row-fluid" id="main-content">
-        <div class="span3">
-          <div class="tabbable">
-            <ul class="nav nav-tabs">
-                <li class="active"><a href="#mapinfo-details" data-toggle="tab">Info</a></li>
-                <li><a href="#mapinfo-places" data-toggle="tab">Places</a></li>
-                <!--
-                <li><a href="#tab3" data-toggle="tab">History</a></li>
-                -->
-            </ul>
-            <div class="tab-content">
-                <div class="tab-pane active" id="mapinfo-details">
-                </div>
-                <div class="tab-pane" id="mapinfo-places">
-                </div>
-                <div class="tab-pane" id="tab3">
-                    <p>History entries will come here</p>
-                </div>
+            <div class="nav-collapse collapse">
+                <ul class="nav">
+                    <li class="active"><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                </ul>
             </div>
-          </div><!--/.tabbable -->
-        </div><!--/span-->
-        <div class="span9">
-          <div class="row-fluid">
-              <div class="tabbable">
-                <ul class="nav nav-tabs" id="toolbar">
-                    <li class="active"><a href="#latlon-tool" data-toggle="tab">LatLon</a></li>
-                    <li><a href="#localsearch-tool" data-toggle="tab">Local search</a></li>
-                    <li><a href="#geocode-tool" data-toggle="tab">Geocode</a></li>
+            <!--/.nav-collapse -->
+        </div>
+    </div>
+</div>
+
+<div class="container-fluid">
+    <div class="row-fluid" id="main-content">
+        <div class="span3">
+            <div class="tabbable">
+                <ul class="nav nav-tabs">
+                    <li class="active"><a href="#mapinfo-details" data-toggle="tab">Info</a></li>
+                    <li><a href="#mapinfo-places" data-toggle="tab">Places</a></li>
                     <!--
-                    <li><a href="#options-tool" data-toggle="tab">Options</a></li>
+                    <li><a href="#tab3" data-toggle="tab">History</a></li>
                     -->
                 </ul>
                 <div class="tab-content">
-                    <div class="tab-pane active" id="latlon-tool">
-                        <form class="form-inline">
-                            <button class="btn btn-link features" title="Features"><i class="icon-question-sign"></i></button>
-                            <input type="text" class="input-small span3 lat" placeholder="Latitude">
-                            <input type="text" class="input-small span3 lon" placeholder="Longitude">
-                            <a href="#" class="btn btn-goto">Go to</a>
-                            <a href="#" class="btn btn-pin"><i class="icon-map-marker"></i> Drop pin</a>
-                            <a href="#" class="btn btn-here"><i class="icon-arrow-left"></i> Here</a>
-                            <a href="#" class="btn btn-home"><i class="icon-home"></i> Home</a>
-                        </form>
+                    <div class="tab-pane active" id="mapinfo-details">
                     </div>
-                    <div class="tab-pane" id="localsearch-tool">
-                        <form class="form-inline">
-                            <button class="btn btn-link features" title="Features"><i class="icon-question-sign"></i></button>
-                            <input type="text" class="input-small span4 keyword" placeholder="Keyword, ex: pizza ramen sushi">
-                            <a href="#" class="btn btn-local"><i class="icon-search"></i> Local search</a>
-                        </form>
+                    <div class="tab-pane" id="mapinfo-places">
                     </div>
-                    <div class="tab-pane" id="geocode-tool">
-                        <form class="form-inline">
-                            <button class="btn btn-link features" title="Features"><i class="icon-question-sign"></i></button>
-                            <input type="text" class="input-small span6 address" placeholder="Address, ex: 6 Rue Gassendi 75014 Paris">
-                            <a href="#" class="btn btn-geocode"><i class="icon-globe"></i> Geocode</a>
-                        </form>
-                    </div>
-                    <div class="tab-pane" id="options-tool">
-                        <form class="form-inline">
-                            <label class="checkbox">
-                                <input type="checkbox" class="show-crosshair"> Show crosshair
-                            </label>
-                            <!--
-                            <label class="checkbox">
-                                <input type="checkbox" class="draggable-markers"> Draggable markers
-                            </label>
-                            <label class="checkbox">
-                                <input type="checkbox" class="show-cursor-coordinates"> Show cursor coordinates
-                            </label>
-                            -->
-                        </form>
+                    <div class="tab-pane" id="tab3">
+                        <p>History entries will come here</p>
                     </div>
                 </div>
-              </div><!--/.tabbable -->
-          </div>
-          <div class="row-fluid">
-              <div id="map">
-                  <div id="map_canvas">
-                      Map should be here in a few seconds.
-                      If that doesn't happen, then either the map provider is not available right now or this tool is broken.
-                  </div>
-                  <div id="crosshair"></div>
-              </div>
-          </div>
-        </div><!--/span-->
-      </div><!--/row-->
+            </div>
+            <!--/.tabbable -->
+        </div>
+        <!--/span-->
+        <div class="span9">
+            <div class="row-fluid">
+                <div class="tabbable">
+                    <ul class="nav nav-tabs" id="toolbar">
+                        <li class="active"><a href="#latlon-tool" data-toggle="tab">LatLon</a></li>
+                        <li><a href="#localsearch-tool" data-toggle="tab">Local search</a></li>
+                        <li><a href="#geocode-tool" data-toggle="tab">Geocode</a></li>
+                        <!--
+                        <li><a href="#options-tool" data-toggle="tab">Options</a></li>
+                        -->
+                    </ul>
+                    <div class="tab-content">
+                        <div class="tab-pane active" id="latlon-tool">
+                            <form class="form-inline">
+                                <button class="btn btn-link features" title="Features"><i
+                                        class="icon-question-sign"></i></button>
+                                <input type="text" class="input-small span3 lat" placeholder="Latitude">
+                                <input type="text" class="input-small span3 lon" placeholder="Longitude">
+                                <a href="#" class="btn btn-goto">Go to</a>
+                                <a href="#" class="btn btn-pin"><i class="icon-map-marker"></i> Drop pin</a>
+                                <a href="#" class="btn btn-here"><i class="icon-arrow-left"></i> Here</a>
+                                <a href="#" class="btn btn-home"><i class="icon-home"></i> Home</a>
+                            </form>
+                        </div>
+                        <div class="tab-pane" id="localsearch-tool">
+                            <form class="form-inline">
+                                <button class="btn btn-link features" title="Features"><i
+                                        class="icon-question-sign"></i></button>
+                                <input type="text" class="input-small span4 keyword"
+                                       placeholder="Keyword, ex: pizza ramen sushi">
+                                <a href="#" class="btn btn-local"><i class="icon-search"></i> Local search</a>
+                            </form>
+                        </div>
+                        <div class="tab-pane" id="geocode-tool">
+                            <form class="form-inline">
+                                <button class="btn btn-link features" title="Features"><i
+                                        class="icon-question-sign"></i></button>
+                                <input type="text" class="input-small span6 address"
+                                       placeholder="Address, ex: 6 Rue Gassendi 75014 Paris">
+                                <a href="#" class="btn btn-geocode"><i class="icon-globe"></i> Geocode</a>
+                            </form>
+                        </div>
+                        <div class="tab-pane" id="options-tool">
+                            <form class="form-inline">
+                                <label class="checkbox">
+                                    <input type="checkbox" class="show-crosshair"> Show crosshair
+                                </label>
+                                <!--
+                                <label class="checkbox">
+                                    <input type="checkbox" class="draggable-markers"> Draggable markers
+                                </label>
+                                <label class="checkbox">
+                                    <input type="checkbox" class="show-cursor-coordinates"> Show cursor coordinates
+                                </label>
+                                -->
+                            </form>
+                        </div>
+                    </div>
+                </div>
+                <!--/.tabbable -->
+            </div>
+            <div class="row-fluid">
+                <div id="map">
+                    <div id="map_canvas">
+                        Map should be here in a few seconds.
+                        If that doesn't happen, then either the map provider is not available right now or this tool is
+                        broken.
+                    </div>
+                    <div id="crosshair"></div>
+                </div>
+            </div>
+        </div>
+        <!--/span-->
+    </div>
+    <!--/row-->
 
-      <hr>
+    <hr>
 
-      <footer>
+    <footer>
         <p>&copy; Janos Gyerik 2015</p>
-      </footer>
+    </footer>
 
-    </div><!--/.fluid-container-->
+</div>
+<!--/.fluid-container-->
 
 <!-- TODO: this should be moved to a file to serve via CDN -->
 <script type="text/template" id="mapinfo-details-template">
@@ -195,17 +210,17 @@
 <!-- TODO: this should be moved to a file to serve via CDN -->
 <script type="text/template" id="mapinfo-places-item-template">
     <div class="row-fluid">
-      <div class="span2 goto">
-          <img src="{{ icon }}">
-      </div>
-      <div class="span8 goto">
-          <div><strong>{{ name }}</strong></div>
-          <div>{{ address }}</div>
-          <div>{{ typesStr }}</div>
-      </div>
-      <div class="span2">
-          <a class="destroy"></a>
-      </div>
+        <div class="span2 goto">
+            <img src="{{ icon }}">
+        </div>
+        <div class="span8 goto">
+            <div><strong>{{ name }}</strong></div>
+            <div>{{ address }}</div>
+            <div>{{ typesStr }}</div>
+        </div>
+        <div class="span2">
+            <a class="destroy"></a>
+        </div>
     </div>
 </script>
 
@@ -222,7 +237,8 @@
 <!-- TODO: this should be moved to a file to serve via CDN -->
 <script type="text/template" id="features-localsearch">
     <ul>
-        <li>Enter some keyword like "pizza" and press <strong>Enter</strong> to search for places around the map center</li>
+        <li>Enter some keyword like "pizza" and press <strong>Enter</strong> to search for places around the map center
+        </li>
         <li>Search results are shown in the <strong>Places</strong> tab in the sidebar</li>
     </ul>
 </script>
@@ -237,25 +253,28 @@
 
 <!-- TODO: this should be moved to a file to serve via CDN -->
 <script type="text/template" id="offline-template">
-      <div class="hero-unit">
+    <div class="hero-unit">
         <div class="alert alert-block alert-error">
             <h2>Error: Google Maps is not available</h2>
-            <p>This tool doesn't work without Google Maps. (Are you connected to internet?) If you are connected to internet but you are seeing this message, then you might want to contact the site author about the problem. (See the email address in the header part of the html source.)</p>
+
+            <p>This tool doesn't work without Google Maps. (Are you connected to internet?) If you are connected to
+                internet but you are seeing this message, then you might want to contact the site author about the
+                problem. (See the email address in the header part of the html source.)</p>
         </div>
-      </div><!--/hero-->
+    </div><!--/hero-->
 </script>
 
-    <!-- Le javascript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="http://www.google.com/jsapi"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?sensor=true&amp;libraries=places"></script>
-    <script src="static/js/jquery-1.8.0.min.js"></script>
-    <script src="static/bootstrap/js/bootstrap.min.js"></script>
-    <script src="static/js/underscore-min.js"></script>
-    <script src="static/js/backbone-min.js"></script>
-    <script src="static/js/jquery.cookie.js"></script>
-    <script src="static/js/todoman.backbone.js"></script>
+<!-- Le javascript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="http://www.google.com/jsapi"></script>
+<script src="https://maps.googleapis.com/maps/api/js?sensor=true&amp;libraries=places"></script>
+<script src="static/js/jquery-1.8.0.min.js"></script>
+<script src="static/bootstrap/js/bootstrap.min.js"></script>
+<script src="static/js/underscore-min.js"></script>
+<script src="static/js/backbone-min.js"></script>
+<script src="static/js/jquery.cookie.js"></script>
+<script src="static/js/todoman.backbone.js"></script>
 
-  </body>
+</body>
 </html>
