--- a/index.html
+++ b/index.html
@@ -8,24 +8,9 @@
     <meta name="author" content="Janos Gyerik info@janosgyerik.com">
 
     <!-- Le styles -->
-    <link href="static/bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link href="static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="static/css/todoman.css" rel="stylesheet">
-    <style type="text/css">
-        body {
-            padding-top: 60px;
-            padding-bottom: 40px;
-        }
-
-        .sidebar-nav {
-            padding: 9px 0;
-        }
-    </style>
-    <link href="static/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
-
-    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <link href="static/css/navbar-fixed-top.css" rel="stylesheet">
 
     <!-- Le fav and touch icons -->
     <link rel="shortcut icon" href="static/ico/favicon.ico">
@@ -37,28 +22,29 @@
 
 <body>
 
-<div class="navbar navbar-inverse navbar-fixed-top">
-    <div class="navbar-inner">
-        <div class="container-fluid">
-            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                    aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
-            </a>
-            <a class="brand" href="index.html">TodoMan</a>
+            </button>
+            <a class="navbar-brand" href="index.html">TodoMan</a>
+        </div>
 
-            <div class="nav-collapse collapse">
-                <ul class="nav">
-                    <li class="active"><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                </ul>
-            </div>
-            <!--/.nav-collapse -->
+        <div id="navbar" class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+            </ul>
         </div>
     </div>
 </div>
 
-<div class="container-fluid">
+<div class="container">
     <div class="row-fluid" id="main-content">
         <div class="span3">
             <div class="tabbable">
@@ -267,13 +253,11 @@
 <!-- Le javascript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-<script src="http://www.google.com/jsapi"></script>
-<script src="https://maps.googleapis.com/maps/api/js?sensor=true&amp;libraries=places"></script>
 <script src="static/js/jquery-1.8.0.min.js"></script>
 <script src="static/bootstrap/js/bootstrap.min.js"></script>
 <script src="static/js/underscore-min.js"></script>
 <script src="static/js/backbone-min.js"></script>
-<script src="static/js/jquery.cookie.js"></script>
+<script src="static/js/backbone-localstorage.js"></script>
 <script src="static/js/todoman.backbone.js"></script>
 
 </body>
