--- a/index.html
+++ b/index.html
@@ -45,104 +45,19 @@
 </div>
 
 <div class="container">
-    <div class="row-fluid" id="main-content">
-        <div class="span3">
-            <div class="tabbable">
-                <ul class="nav nav-tabs">
-                    <li class="active"><a href="#mapinfo-details" data-toggle="tab">Info</a></li>
-                    <li><a href="#mapinfo-places" data-toggle="tab">Places</a></li>
-                    <!--
-                    <li><a href="#tab3" data-toggle="tab">History</a></li>
-                    -->
-                </ul>
-                <div class="tab-content">
-                    <div class="tab-pane active" id="mapinfo-details">
-                    </div>
-                    <div class="tab-pane" id="mapinfo-places">
-                    </div>
-                    <div class="tab-pane" id="tab3">
-                        <p>History entries will come here</p>
-                    </div>
-                </div>
-            </div>
-            <!--/.tabbable -->
-        </div>
-        <!--/span-->
-        <div class="span9">
-            <div class="row-fluid">
-                <div class="tabbable">
-                    <ul class="nav nav-tabs" id="toolbar">
-                        <li class="active"><a href="#latlon-tool" data-toggle="tab">LatLon</a></li>
-                        <li><a href="#localsearch-tool" data-toggle="tab">Local search</a></li>
-                        <li><a href="#geocode-tool" data-toggle="tab">Geocode</a></li>
-                        <!--
-                        <li><a href="#options-tool" data-toggle="tab">Options</a></li>
-                        -->
-                    </ul>
-                    <div class="tab-content">
-                        <div class="tab-pane active" id="latlon-tool">
-                            <form class="form-inline">
-                                <button class="btn btn-link features" title="Features"><i
-                                        class="icon-question-sign"></i></button>
-                                <input type="text" class="input-small span3 lat" placeholder="Latitude">
-                                <input type="text" class="input-small span3 lon" placeholder="Longitude">
-                                <a href="#" class="btn btn-goto">Go to</a>
-                                <a href="#" class="btn btn-pin"><i class="icon-map-marker"></i> Drop pin</a>
-                                <a href="#" class="btn btn-here"><i class="icon-arrow-left"></i> Here</a>
-                                <a href="#" class="btn btn-home"><i class="icon-home"></i> Home</a>
-                            </form>
-                        </div>
-                        <div class="tab-pane" id="localsearch-tool">
-                            <form class="form-inline">
-                                <button class="btn btn-link features" title="Features"><i
-                                        class="icon-question-sign"></i></button>
-                                <input type="text" class="input-small span4 keyword"
-                                       placeholder="Keyword, ex: pizza ramen sushi">
-                                <a href="#" class="btn btn-local"><i class="icon-search"></i> Local search</a>
-                            </form>
-                        </div>
-                        <div class="tab-pane" id="geocode-tool">
-                            <form class="form-inline">
-                                <button class="btn btn-link features" title="Features"><i
-                                        class="icon-question-sign"></i></button>
-                                <input type="text" class="input-small span6 address"
-                                       placeholder="Address, ex: 6 Rue Gassendi 75014 Paris">
-                                <a href="#" class="btn btn-geocode"><i class="icon-globe"></i> Geocode</a>
-                            </form>
-                        </div>
-                        <div class="tab-pane" id="options-tool">
-                            <form class="form-inline">
-                                <label class="checkbox">
-                                    <input type="checkbox" class="show-crosshair"> Show crosshair
-                                </label>
-                                <!--
-                                <label class="checkbox">
-                                    <input type="checkbox" class="draggable-markers"> Draggable markers
-                                </label>
-                                <label class="checkbox">
-                                    <input type="checkbox" class="show-cursor-coordinates"> Show cursor coordinates
-                                </label>
-                                -->
-                            </form>
-                        </div>
-                    </div>
-                </div>
-                <!--/.tabbable -->
-            </div>
-            <div class="row-fluid">
-                <div id="map">
-                    <div id="map_canvas">
-                        Map should be here in a few seconds.
-                        If that doesn't happen, then either the map provider is not available right now or this tool is
-                        broken.
-                    </div>
-                    <div id="crosshair"></div>
-                </div>
-            </div>
-        </div>
-        <!--/span-->
+    <div id="todolist">
+        <table class="table">
+            <thead>
+            <!--<tr>-->
+                <!--<th>Keyword</th>-->
+                <!--<th class="pull-right">Count</th>-->
+                <!--<th><a class="destroy"></a></th>-->
+            <!--</tr>-->
+            </thead>
+            <tbody id="todolist-list">
+            </tbody>
+        </table>
     </div>
-    <!--/row-->
 
     <hr>
 
@@ -152,6 +67,16 @@
 
 </div>
 <!--/.fluid-container-->
+
+<!-- TODO: this should be moved to a file to serve via CDN -->
+<script type="text/template" id="oneline-template">
+    <td><span class="todo-title">{{ title }}</span></td>
+    <td><span class="todo-date">{{ date }}</span></td>
+    <td><i class="glyphicon glyphicon-pencil"></i></td>
+    <td><i class="glyphicon glyphicon-remove"></i></td>
+    <td><i class="glyphicon glyphicon-remove-circle"></i></td>
+    <td><i class="glyphicon glyphicon-remove-sign"></i></td>
+</script>
 
 <!-- TODO: this should be moved to a file to serve via CDN -->
 <script type="text/template" id="mapinfo-details-template">
