can remove items

--- a/index.html
+++ b/index.html
@@ -73,9 +73,7 @@
     <td><span class="todo-title">{{ title }}</span></td>
     <td><span class="todo-date">{{ date }}</span></td>
     <td><i class="glyphicon glyphicon-pencil"></i></td>
-    <td><i class="glyphicon glyphicon-remove"></i></td>
-    <td><i class="glyphicon glyphicon-remove-circle"></i></td>
-    <td><i class="glyphicon glyphicon-remove-sign"></i></td>
+    <td><i class="glyphicon glyphicon-remove todo-remove"></i></td>
 </script>
 
 <!-- TODO: this should be moved to a file to serve via CDN -->
