commented out silly copyright stuff

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
         </table>
     </div>
 
-    <hr>
+    <!--<hr>-->
 
     <footer>
-        <p>&copy; Janos Gyerik 2015</p>
+        <!--<p>&copy; Janos Gyerik 2015</p>-->
     </footer>
 
 </div>
