added headers for the columns

--- a/index.html
+++ b/index.html
@@ -48,11 +48,12 @@
     <div id="todolist">
         <table class="table">
             <thead>
-            <!--<tr>-->
-                <!--<th>Keyword</th>-->
-                <!--<th class="pull-right">Count</th>-->
-                <!--<th><a class="destroy"></a></th>-->
-            <!--</tr>-->
+            <tr>
+                <th>Todo</th>
+                <th class="">Date</th>
+                <th>Edit</th>
+                <th>Delete</th>
+            </tr>
             </thead>
             <tbody id="todolist-list">
             </tbody>
