disabled edit column, not working yet

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <tr>
                 <th>Todo</th>
                 <th class="">Date</th>
-                <th>Edit</th>
+                <!--<th>Edit</th>-->
                 <th>Delete</th>
             </tr>
             </thead>
@@ -73,7 +73,7 @@
 <script type="text/template" id="oneline-template">
     <td><span class="todo-title">{{ title }}</span></td>
     <td><span class="todo-date">{{ date }}</span></td>
-    <td><i class="glyphicon glyphicon-pencil"></i></td>
+    <!--<td><i class="glyphicon glyphicon-pencil"></i></td>-->
     <td><i class="glyphicon glyphicon-remove todo-remove"></i></td>
 </script>
 
