--- a/index.html
+++ b/index.html
@@ -71,7 +71,10 @@
 
 <!-- TODO: this should be moved to a file to serve via CDN -->
 <script type="text/template" id="oneline-template">
-    <td><span class="todo-title">{{ title }}</span></td>
+    <td>
+        <span class="todo-title todo-view">{{ title }}</span>
+        <input class="todo-title todo-edit" type="text" value="{{ title }}"/>
+    </td>
     <td><span class="todo-date">{{ date }}</span></td>
     <!--<td><i class="glyphicon glyphicon-pencil"></i></td>-->
     <td><i class="glyphicon glyphicon-remove todo-remove"></i></td>
