--- a/index.html
+++ b/index.html
@@ -55,6 +55,13 @@
                 <th>Delete</th>
             </tr>
             </thead>
+            <tbody>
+            <tr>
+                <td>
+                    <input class="todo-title todo-new" type="text" placeholder="stuff to do..."/>
+                </td>
+            </tr>
+            </tbody>
             <tbody id="todolist-list">
             </tbody>
         </table>
