--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <table class="table">
             <thead>
             <tr>
-                <th>Todo</th>
+                <th>Task name / stuff to do</th>
                 <th class="">Date</th>
                 <!--<th>Edit</th>-->
                 <th>Delete</th>
